--- a/client/components/results/resultsView.html
+++ b/client/components/results/resultsView.html
@@ -1,14 +1,14 @@
 <div>
   <p ng-repeat="vote in currentNumber.votes">{{vote.bill.title}}</p>
   <div>
-    <h2>{{singleMemberData.first_name}} {{singleMemberData.middle_name}} {{singleMemberData.last_name}}</h2>
-    <p>State: {{singleMemberData.state}}</p>
-    <p>District: {{singleMemberData.district}}</p>
+    <h2>{{singleMember.first_name}} {{singleMember.middle_name}} {{singleMember.last_name}}</h2>
+    <p>State: {{singleMember.state}}</p>
+    <p>District: {{singleMember.district}}</p>
     <p>Party:
-      <span ng-if="singleMemberData.party === 'D'">Democratic</span>
-      <span ng-if="singleMemberData.party === 'R'">Republican</span>
+      <span ng-if="singleMember.party === 'D'">Democratic</span>
+      <span ng-if="singleMember.party === 'R'">Republican</span>
     </p>
-    <a href="{{singleMemberData.url}}" target="_blank">Website</a>
+    <a href="{{singleMember.url}}" target="_blank">Website</a>
   </div>
 
   <table>
