Added components to results view. Work not complete.

--- a/client/components/results/resultsView.html
+++ b/client/components/results/resultsView.html
@@ -1,5 +1,3 @@
 <div>
-  Hello I'm ResultsView
-  {{1+1}}
-  <button ng-click="testFunction()">please work</button>
+  <p ng-repeat="vote in currentNumber.votes">{{vote.bill.title}}</p>
 </div>
