Got votes from the api working.

--- a/client/components/results/resultsView.html
+++ b/client/components/results/resultsView.html
@@ -7,7 +7,7 @@
       <span ng-if="memberInfo.party === 'D'">Democratic</span>
       <span ng-if="memberInfo.party === 'R'">Republican</span>
     </p>
-    <a href="{{memberInfo.url}}" target="_blank">Website</a>
+    <a href="{{memberInfo.website}}" target="_blank">Website</a>
   </div>
 
   <table>
