Reinserted the changes that were removed by mistake.

--- a/client/components/search/searchView.html
+++ b/client/components/search/searchView.html
@@ -1,7 +1,7 @@
 <div class='cyan lighten-3 z-depth-1'>
   <div class='row'>
     <h1 class='col s12 center-align'>Congressional Stalker</h1>
-    <h4 class='col s12 center-align'>Find out what your elected officials are doing</h4>
+    <h4 class='col s12 center-align'>Find out what you're elected officials are doing</h4>
     <br>
   </div>
 </div>
@@ -16,4 +16,3 @@
     </form>
   </div>
 </div>
-
