--- a/client/components/search/byState.html
+++ b/client/components/search/byState.html
@@ -1,5 +1,5 @@
 <div class='row'>
-  <div class='col s6 offset-s3 drop'>
+  <div class='col s12 center-align drop'>
     <!-- Dropdown Trigger -->
     <a class='dropdown-button btn' href='javascript:void(0);' data-activates='demoDropdown' data-beloworigin='true' dropdown data-hover='true'>
         Find congress members by state
