Added congressperson images on their bio page.

--- a/client/components/results/resultsView.html
+++ b/client/components/results/resultsView.html
@@ -1,4 +1,5 @@
 <div>
+<img ng-src="{{memberImageUrl}}" alt="{{memberInfo.name}}">
   <div>
     <h2>{{memberInfo.name}}</h2>
     <p>State: {{memberInfo.state}}</p>
