--- a/client/components/results/resultsView.html
+++ b/client/components/results/resultsView.html
@@ -8,7 +8,9 @@
       <span ng-if="memberInfo.party === 'D'">Democratic</span>
       <span ng-if="memberInfo.party === 'R'">Republican</span>
     </p>
-    <a href="{{memberInfo.website}}" target="_blank">Website</a>
+    <a ng-if="memberInfo.website" href="{{memberInfo.website}}" target="_blank"><img src="/icons/icon_web.png" alt="website"></a>
+    <a ng-if="memberInfo.facebook" href="{{memberFacebookUrl}}" target="_blank"><img src="/icons/icon_facebook.png" alt="facebook"></a>
+    <a ng-if="memberInfo.twitter" href="{{memberTwitterUrl}}" target="_blank"><img src="/icons/icon_twitter.png" alt="twitter"></a>
   </div>
 
   <div id="voteProgress">
