--- a/client/components/results/resultsView.html
+++ b/client/components/results/resultsView.html
@@ -1,20 +1,33 @@
 <div>
-<img ng-src="{{memberImageUrl}}" alt="{{memberInfo.name}}">
-  <div>
-    <h2>{{memberInfo.name}}</h2>
+  <div id="voteProgress">
+    <p>% Votes</p>
+  </div>
+  
+  <img ng-src="{{memberImageUrl}}" alt="{{memberInfo.name}}">
+  <div id="summary">
+    <h2>{{memberInfo.name | capitalize}}</h2>
     <p>State: {{memberInfo.state}}</p>
     <p>District: {{memberInfo.district}}</p>
     <p>Party:
       <span ng-if="memberInfo.party === 'D'">Democratic</span>
       <span ng-if="memberInfo.party === 'R'">Republican</span>
     </p>
+  </div>
+
+  <div id="bio">
+    <h3>Bio:</h3>
+    <ul ng-repeat="item in memberBio">
+      <li class="collection-item avatar">
+        <i class="fa fa-angle-double-right"></i>
+        <span>{{item.trim() | capitalize}}</span>
+      </li>
+    </ul>
+  </div>
+
+  <div id="social">
     <a ng-if="memberInfo.website" href="{{memberInfo.website}}" target="_blank"><img src="/icons/icon_web.png" alt="website"></a>
     <a ng-if="memberInfo.facebook" href="{{memberFacebookUrl}}" target="_blank"><img src="/icons/icon_facebook.png" alt="facebook"></a>
     <a ng-if="memberInfo.twitter" href="{{memberTwitterUrl}}" target="_blank"><img src="/icons/icon_twitter.png" alt="twitter"></a>
-  </div>
-
-  <div id="voteProgress">
-    <p>% Votes</p>
   </div>
 
   <table>
