--- a/client/components/results/byStateResults.html
+++ b/client/components/results/byStateResults.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col s6 offset-s3">
-      <h2>{{state}}</h2>
+      <h2>{{states[state]}}</h2>
       <table class="bordered">
         <tr ng-repeat="result in byStateResults">
           <td class="table-items-medium" ng-click="getVotes(result.name)">{{result.name | capitalize}}</td>
