--- a/client/styles.css
+++ b/client/styles.css
@@ -27,40 +27,46 @@
   font-weight: bold;
 }
 
-#bio-pic {
-  float: left;
-}
-
-#bio ul{
-  /*clear: both;*/
-  margin: 5px;
+.flex {
+  display: flex;
 }
 
 #member-container {
   margin-top: 5%;
 }
 
+#bio ul{
+  margin: 5px 0 10px;
+}
+
+#social {
+  margin-top: 15px;
+}
+
 #summary {
-  float:left;
-  margin-left: 10px;
+  margin-left: 20px;
   margin-right: 30px;
 }
 
+#summary p {
+  margin: 5px 0;
+}
+
 #voteProgress {
-  max-width: 200px;
-  max-height: 200px;
-  float: right;
+  width: 200px;
+  height: 200px;
   margin: 20px;
 }
 
 #voteProgress > p {
   color: coral;
   position: absolute;
-  left: 35%;
   top: 44%;
+  margin: 18px 12px;
+  text-align: center;
 }
 
-a>img{
+a > img{
   width: 40px;
 }
 
