--- a/client/components/results/resultsView.html
+++ b/client/components/results/resultsView.html
@@ -34,25 +34,37 @@
         </li>
       </ul>
     </div>
-
-
   </div>
-  <div class='container'>
-    <input ng-model='search' placeholder='Search by bill!'></input>
-    <button ng-click='increment()' > Click Me For More!</button>
-    <div class="row"></div>
 
-    <table class='responsive-table bordered striped'>
-      <tr ng-repeat="vote in currentMember.votes | limitTo: limit | filter:search">
-        <td> {{vote.bill.title}} <br>{{vote.question}}</td>
-        <td ng-class="{red: vote.position === 'No', green: vote.position === 'Yes'}">
-        <div class="container center-align vertical-align">
-          <i ng-if="vote.position === 'Yes' " class="material-icons center-align">check_circle</i>
-          <i ng-if="vote.position === 'No' " class="material-icons center-align">clear</i>
-        </div>
-        </td>
-        
-      </tr>
-    </table>
+  <input ng-model='search' placeholder='search by bill!'></input>
+  <div class="row">
+    <div class="col center-align s12 card-panel lighter-blue lighten-2">Pages {{pages.min}} - {{pages.max}}</div>
+  </div>
+
+  <table class='responsive-table bordered striped'>
+    <tr ng-repeat="vote in currentMember.votes.slice(pages.min - 1, pages.max) | filter:search">
+      <td> {{vote.bill.title}} <br>{{vote.question}}</td>
+      <td ng-class="{red: vote.position === 'No', green: vote.position === 'Yes'}">
+      <div class="container center-align vertical-align">
+        <i ng-if="vote.position === 'Yes' " class="material-icons center-align">check_circle</i>
+        <i ng-if="vote.position === 'No' " class="material-icons center-align">clear</i>
+      </div>
+      </td>
+    </tr>
+  </table>
+
+  <div class="row card-panel lighter-blue lighten-2">
+    <div class="col s12 center-align">
+      <pagination
+      page="1"
+      page-size="10"
+      total="100"
+      show-prev-next="true"
+      dots="...."
+      hide-if-empty="false"
+      adjacent="2"
+      scroll-top="false"
+      pagination-action="changePage(page)" />
+    </div>
   </div>
 </div>
