--- a/client/styles.css
+++ b/client/styles.css
@@ -70,3 +70,16 @@ a > img{
   width: 40px;
 }
 
+.lighter-blue {
+  background-color: #678CE5;
+  color: white;
+}
+
+.card-panel {
+  margin: 0 0 -20px 0;
+}
+
+.table-pages {
+  left: 50%;
+}
+
