Finishes Styling for Presentation

--- a/client/components/search/searchView.html
+++ b/client/components/search/searchView.html
@@ -1,4 +1,4 @@
-<div class='cyan lighten-3 z-depth-1'>
+<div class='darkishBlue z-depth-1'>
   <div class='row'>
     <h1 class='col s12 center-align'>Congressional Stalker</h1>
     <h4 class='col s12 center-align'>Find out what your elected officials are doing</h4>
