Added loading spinner for data. Fixed null search issue.

--- a/client/components/search/searchView.html
+++ b/client/components/search/searchView.html
@@ -6,3 +6,21 @@
   </div>
 </div>
 <div dl-search-member></div>
+<div class="loading" ng-if="loading">
+  <img src="/images/ring.gif">
+</div>
+
+<!-- <div class="row team">
+  <div class="col s12">
+  <h2>The Team</h2>
+  </div>
+</div>
+<div class="row team">
+  <div class="col s12">
+    <div class="team-member">
+      <img src="{{teamMemberImage}}" alt="">
+      <h3>{{teamMemberName}}</h3>
+      <p>{{teamMemberRole}}</p>
+    </div>
+  </div>
+</div> -->
