--- a/client/components/search/searchView.html
+++ b/client/components/search/searchView.html
@@ -1,7 +1,7 @@
 <div class='darkishBlue z-depth-1'>
   <div class='row'>
-    <h1 class='col s12 center-align'>Congressional Stalker</h1>
-    <h4 class='col s12 center-align'>Find out what your elected officials are doing</h4>
+    <h2 class='col s12 center-align'>Get informed</h2>
+    <h4 class='col s12 center-align'>What are your elected officials doing?</h4>
     <br>
   </div>
 </div>
