Added searchAll. Cleaned-up team profile.

--- a/client/components/results/resultsView.html
+++ b/client/components/results/resultsView.html
@@ -39,13 +39,13 @@
 
     <div class='row'> </div>
 
-  <input ng-focus="showPagination=false" ng-blur="showPagination=true" ng-model='search' placeholder='search by bill!'></input>
+  <input ng-focus="showAll()" ng-blur="showTen()" ng-model='search' placeholder='search by bill!'></input>
   <div class="row">
     <div  ng-if="showPagination" class="col center-align s12 card-panel lighter-blue lighten-2">Items {{pages.min}} - {{pages.max}}</div>
   </div>
 
   <table class='responsive-table bordered striped'>
-    <tr ng-repeat="vote in currentMember.votes | limitTo : pages.max : pages.min | filter:search">
+    <tr ng-repeat="vote in currentMember.votes.slice(pages.min - 1, pages.max) | filter:search">
       <td> <b>{{vote.bill.title}} <br>{{vote.question}} </b> <br> <br> <span class='date'> Date: {{vote.date}} </span></td>
       <td class= "fixed-col" ng-class="{red: vote.position === 'No', green: vote.position === 'Yes'}">
         <div class="container center-align vertical-align">
